# weather2fg

./: CMakeLists.txt  README.md  cmake_uninstall.cmake.in
.github/workflows/: cmake-multi-platform.yml
src/: CMakeLists.txt  logging.cxx  logging.hxx  main.cxx  utils.cxx  utils.hxx
